--- a/project_candradimuka/package.json
+++ b/project_candradimuka/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "bootstrap": "^5.3.3",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.7",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
