--- a/project_candradimuka/package.json
+++ b/project_candradimuka/package.json
@@ -14,7 +14,8 @@
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.7",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
